// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render cancel button when drawing 1`] = `
<EuiFlexGroup
  gutterSize="s"
>
  <EuiFlexItem>
    <EuiPopover
      anchorPosition="leftUp"
      button={
        <EuiButtonIcon
          aria-label="Tools"
          className="mapToolbarOverlay__button"
          color="text"
          iconSize="m"
          iconType="wrench"
          onClick={[Function]}
          title="Tools"
          type="button"
        />
      }
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      id="contextMenu"
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      withTitle={true}
    >
      <EuiContextMenu
        initialPanelId={0}
        panels={
          Array [
            Object {
              "id": 0,
              "items": Array [
                Object {
                  "name": "Draw shape to filter data",
                  "onClick": [Function],
                  "panel": undefined,
                },
                Object {
                  "name": "Draw bounds to filter data",
                  "onClick": [Function],
                  "panel": undefined,
                },
              ],
              "title": "Tools",
            },
          ]
        }
      />
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiButton
      color="primary"
      fill={true}
      iconSide="left"
      onClick={[Function]}
      size="s"
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="xpack.maps.tooltip.toolsControl.cancelDrawButtonLabel"
        values={Object {}}
      />
    </EuiButton>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`renders 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiButtonIcon
      aria-label="Tools"
      className="mapToolbarOverlay__button"
      color="text"
      iconSize="m"
      iconType="wrench"
      onClick={[Function]}
      title="Tools"
      type="button"
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="contextMenu"
  isOpen={false}
  ownFocus={false}
  panelPaddingSize="none"
  withTitle={true}
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "id": 0,
          "items": Array [
            Object {
              "name": "Draw shape to filter data",
              "onClick": [Function],
              "panel": undefined,
            },
            Object {
              "name": "Draw bounds to filter data",
              "onClick": [Function],
              "panel": undefined,
            },
          ],
          "title": "Tools",
        },
      ]
    }
  />
</EuiPopover>
`;
